--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,9 @@ cython_debug/
 out1.pdfdata.json
 backup.json
 out1.pdf
+bootstrap-datepicker.css
+bootstrap-slider.css
+bootstrap-theme.css
+bootstrap.css
+cs-foodbaker-plugin.css
+iconmoon.css
